@@ -14,4 +14,4 @@ Ca	gib 0	1e-9 ic=0.5
 Rb	bad 0	1k
 
 *.tran 1e-9 150e-6 uic
-.pss 0.8e6 130e-6 1 50 10 3 5e-3 uic
+.pss 0.8e6 130e-6 1 50 10 5 5e-3 uic
